--- a/Sydra/SydraPlay/app/views/index.scala.html
+++ b/Sydra/SydraPlay/app/views/index.scala.html
@@ -1,17 +1,17 @@
 @()
 
-@main("Welcome") {
+@main("InteractionFree") {
 @defining(play.core.PlayVersion.current) { version =>
 
 <section id="content">
     <div class="wrapper doc">
         <article>
-            <p>1</p>
-            <p>InteractionFree is an HTTP-based, cross-language invoking protocol. </p>
+            <div class="w3-container w3-content w3-center w3-padding-64" id="intro">
+                <h2>An intuitive cross-language RPC</h2>
+                <p>InteractionFree is a light-weight, reliable and cross-language library for distributed communication
+                    between server-side processes.</p>
+            </div>
         </article>
-        <aside>
-            @commonSidebar()
-        </aside>
     </div>
 </section>
 }
