--- a/Sydra/SydraPlay/app/views/dashboard.scala.html
+++ b/Sydra/SydraPlay/app/views/dashboard.scala.html
@@ -13,6 +13,11 @@
         <article>
             <div class="w3-container w3-content w3-center w3-padding-64" id="intro">
                 <h2>Dashboard</h2>
+                <div>
+                    <h4>Service List</h4>
+                    <div id="serviceList"></div>
+                    <p>----------------------------------------</p>
+                </div>
             </div>
         </article>
     </div>
