--- a/Sydra/SydraPlay/app/views/dashboard.scala.html
+++ b/Sydra/SydraPlay/app/views/dashboard.scala.html
@@ -11,12 +11,23 @@
 <section id="content">
     <div class="wrapper doc">
         <article>
-            <div class="w3-container w3-content w3-center w3-padding-64" id="intro">
-                <h2>Dashboard</h2>
-                <div>
-                    <h4>Service List</h4>
-                    <div id="serviceList"></div>
-                    <p>----------------------------------------</p>
+            <div class="w3-container w3-content w3-center w3-padding-4" id="intro">
+                <h3>Dashboard</h3>
+                <div class="w3-card w3-light-grey">
+                    <h4>Services</h4>
+                    <table class="w3-table w3-bordered w3-centered">
+                        <tr>
+                            <th>ServiceName</th>
+                            <th>OnTime</th>
+                            <th>Transmitted</th>
+                            <th>.</th>
+                        </tr>
+                        <!--                        <tr>-->
+                        <!--                            <td>Jill</td>-->
+                        <!--                            <td>Smith</td>-->
+                        <!--                            <td>50</td>-->
+                        <!--                        </tr>-->
+                    </table>
                 </div>
             </div>
         </article>
