--- a/Sydra/SydraPlay/app/views/dashboard.scala.html
+++ b/Sydra/SydraPlay/app/views/dashboard.scala.html
@@ -1,12 +1,16 @@
 @()
 
-@main("Hello World") {
+@main("Dashboard") {
 @defining(play.core.PlayVersion.current) { version =>
 
+<link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/jquery.dataTables.min.css")'>
 <script src='@routes.Assets.versioned("javascripts/jquery-3.2.1.min.js")' type="text/javascript"></script>
+<script src='@routes.Assets.versioned("javascripts/moment.js")' type="text/javascript"></script>
 <script src='@routes.Assets.versioned("javascripts/msgpack.min.js")' type="text/javascript"></script>
+<script src='@routes.Assets.versioned("javascripts/jquery.dataTables.min.js")' type="text/javascript"></script>
 <script src='@routes.Assets.versioned("javascripts/interactionfree.js")' type="text/javascript"></script>
 <script src='@routes.Assets.versioned("javascripts/dashboard.js")' type="text/javascript"></script>
+
 
 <section id="content">
     <div class="wrapper doc">
@@ -15,18 +19,17 @@
                 <h3>Dashboard</h3>
                 <div class="w3-card w3-light-grey">
                     <h4>Services</h4>
-                    <table class="w3-table w3-bordered w3-centered">
+                    <table class="w3-table w3-bordered w3-centered" id="ServiceListTable">
+                      <thead>
                         <tr>
                             <th>ServiceName</th>
                             <th>OnTime</th>
                             <th>Transmitted</th>
                             <th>.</th>
                         </tr>
-                        <!--                        <tr>-->
-                        <!--                            <td>Jill</td>-->
-                        <!--                            <td>Smith</td>-->
-                        <!--                            <td>50</td>-->
-                        <!--                        </tr>-->
+                        </thead>
+                        <tbody>
+                         </tbody>
                     </table>
                 </div>
             </div>
